syntax = "proto3";

package image.v1;

option go_package = "kafka-consumer/internal/pb;pb";

// CommandType represents the type of image processing command
enum CommandType {
  COMMAND_TYPE_UNSPECIFIED = 0;
  COMMAND_TYPE_RESIZE = 1;
  COMMAND_TYPE_FILTER = 2;
  COMMAND_TYPE_TRANSFORM = 3;
  COMMAND_TYPE_ANALYZE = 4;
  COMMAND_TYPE_CROP = 5;
  COMMAND_TYPE_REMOVE_BACKGROUND = 6;
}

// ImageCommand represents a command to process an image
message ImageCommand {
  string id = 1;
  CommandType command = 2;
  string image_url = 3;
  
  // Parameters based on command type
  oneof parameters {
    ResizeParameters resize = 10;
    FilterParameters filter = 11;
    TransformParameters transform = 12;
    CropParameters crop = 13;
    AnalyzeParameters analyze = 14;
    RemoveBackgroundParameters remove_background = 15;
  }
}

// ResizeParameters for resize command
message ResizeParameters {
  int32 width = 1;
  int32 height = 2;
  bool maintain_aspect_ratio = 3;
}

// FilterParameters for filter command
message FilterParameters {
  string filter_type = 1;  // blur, sharpen, grayscale, sepia, etc.
  double intensity = 2;    // 0.0 to 1.0
}

// TransformParameters for transform command
message TransformParameters {
  double rotation_degrees = 1;
  bool flip_horizontal = 2;
  bool flip_vertical = 3;
}

// CropParameters for crop command
message CropParameters {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
}

// AnalyzeParameters for AI analysis
message AnalyzeParameters {
  repeated string models = 1;  // model names to use for analysis
}

// RemoveBackgroundParameters for AI background removal
message RemoveBackgroundParameters {
  string output_format = 1;  // png, webp
  bool high_quality = 2;
}

// ProcessingResult represents the result of image processing
message ProcessingResult {
  string command_id = 1;
  bool success = 2;
  string output_url = 3;
  string error_message = 4;
  int64 processing_time_ms = 5;
}
